--- a/app/index.html
+++ b/app/index.html
@@ -759,7 +759,10 @@
             <div class="advantages__inner">
                 <div class="advantages__item">
                     <div class="advantages__item-images icosvg-1">
-                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 15"><path d="M133.25,132H133v-3a3,3,0,0,0-3-3h-2a3,3,0,0,0-3,3v3h-.25a.76.76,0,0,0-.75.75v7.5a.76.76,0,0,0,.75.75h8.5a.76.76,0,0,0,.75-.75v-7.5A.76.76,0,0,0,133.25,132ZM127,129a1,1,0,0,1,1-1h2a1,1,0,0,1,1,1v3h-4Z" transform="translate(-124 -126)"/></svg>
+                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 15">
+                            <path
+                                d="M133.25,132H133v-3a3,3,0,0,0-3-3h-2a3,3,0,0,0-3,3v3h-.25a.76.76,0,0,0-.75.75v7.5a.76.76,0,0,0,.75.75h8.5a.76.76,0,0,0,.75-.75v-7.5A.76.76,0,0,0,133.25,132ZM127,129a1,1,0,0,1,1-1h2a1,1,0,0,1,1,1v3h-4Z"
+                                transform="translate(-124 -126)" /></svg>
                     </div>
                     <div class="advantages__item-title">
                         Easily Buy & Sell
@@ -771,7 +774,10 @@
                 </div>
                 <div class="advantages__item">
                     <div class="advantages__item-images icosvg-2">
-                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15.81"><path d="M153.06,120a6.31,6.31,0,0,0,.8-.67,3.46,3.46,0,0,0,1-1.81,2,2,0,0,0-.49-1.8,1.88,1.88,0,0,0-1.37-.53,3.26,3.26,0,0,0-2.24,1,8.87,8.87,0,0,0-2,3.49,7.14,7.14,0,0,0-1.66-3.35,2.49,2.49,0,0,0-1.74-.75,1.83,1.83,0,0,0-1.32.52,2.18,2.18,0,0,0,.23,3.06,4.91,4.91,0,0,0,1.11.82H142v4h1v7h12v-7h1v-4h-2.94Zm-1.52-3a2.16,2.16,0,0,1,1.44-.69.83.83,0,0,1,.57.2c.41.41.18,1.35-.49,2a6.93,6.93,0,0,1-2.41,1.47h-.79A7.64,7.64,0,0,1,151.54,117Zm-6.88.51a.7.7,0,0,1,.19-.6.72.72,0,0,1,.52-.19h0a1.39,1.39,0,0,1,.95.43,5.59,5.59,0,0,1,1.26,2.44s0,0,0,.08l-.08,0a5.59,5.59,0,0,1-2.44-1.26,1.47,1.47,0,0,1-.43-.87ZM148,130h-4v-6.5h4Zm0-7h-5v-2h5Zm6,7h-4v-6.5h4Zm1-7h-5v-2h5Z" transform="translate(-142 -115.19)"/></svg>
+                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15.81">
+                            <path
+                                d="M153.06,120a6.31,6.31,0,0,0,.8-.67,3.46,3.46,0,0,0,1-1.81,2,2,0,0,0-.49-1.8,1.88,1.88,0,0,0-1.37-.53,3.26,3.26,0,0,0-2.24,1,8.87,8.87,0,0,0-2,3.49,7.14,7.14,0,0,0-1.66-3.35,2.49,2.49,0,0,0-1.74-.75,1.83,1.83,0,0,0-1.32.52,2.18,2.18,0,0,0,.23,3.06,4.91,4.91,0,0,0,1.11.82H142v4h1v7h12v-7h1v-4h-2.94Zm-1.52-3a2.16,2.16,0,0,1,1.44-.69.83.83,0,0,1,.57.2c.41.41.18,1.35-.49,2a6.93,6.93,0,0,1-2.41,1.47h-.79A7.64,7.64,0,0,1,151.54,117Zm-6.88.51a.7.7,0,0,1,.19-.6.72.72,0,0,1,.52-.19h0a1.39,1.39,0,0,1,.95.43,5.59,5.59,0,0,1,1.26,2.44s0,0,0,.08l-.08,0a5.59,5.59,0,0,1-2.44-1.26,1.47,1.47,0,0,1-.43-.87ZM148,130h-4v-6.5h4Zm0-7h-5v-2h5Zm6,7h-4v-6.5h4Zm1-7h-5v-2h5Z"
+                                transform="translate(-142 -115.19)" /></svg>
                     </div>
                     <div class="advantages__item-title">
                         Quality Products
@@ -783,7 +789,10 @@
                 </div>
                 <div class="advantages__item">
                     <div class="advantages__item-images icosvg-3">
-                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 14.82"><path d="M150.8,131a4.57,4.57,0,0,0-3.8,2.8,4.57,4.57,0,0,0-3.8-2.8,4.2,4.2,0,0,0-4.2,4.2c0,4.72,4.76,6,8,10.62,3.07-4.64,8-6,8-10.62a4.2,4.2,0,0,0-4.2-4.2Z" transform="translate(-139 -131)"/></svg>
+                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 14.82">
+                            <path
+                                d="M150.8,131a4.57,4.57,0,0,0-3.8,2.8,4.57,4.57,0,0,0-3.8-2.8,4.2,4.2,0,0,0-4.2,4.2c0,4.72,4.76,6,8,10.62,3.07-4.64,8-6,8-10.62a4.2,4.2,0,0,0-4.2-4.2Z"
+                                transform="translate(-139 -131)" /></svg>
                     </div>
                     <div class="advantages__item-title">
                         100% Secure Payment
@@ -794,6 +803,17 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="author" style="background-image: url(images/author-bg.jpg);">
+        <div class="author__box">
+            <div class="author__title">
+                Over <span>20,000</span> Author
+                Are Involved Here!
+            </div>
+            <a href="#" class="author__link">
+                Become A Author
+            </a>
         </div>
     </section>
 
